@startuml
'https://plantuml.com/class-diagram

abstract class App
abstract class ParsingData

ParsingData <|-- App
App <|-- ParsingData

ParsingData <|- App
App <|- ParsingData

ParsingData <|-- App
App <|- ParsingData
class App {
Input()
Output()
}

class ParsingData{
parsingdatafirst
parsingdatalast
parsingdatasalery
}

@enduml